@@ -2,6 +2,10 @@
 
 NEW FEATURES
 
+- added a function `httw()` to watch for changes under a directory and refresh
+  an HTML page automatically (if it is being viewed in the browser) when any
+  files are modified
+
 - servr accepts HTTP Range requests now (thanks, @rekado, #21)
 
 BUG FIXES
